--- a/ex3.html
+++ b/ex3.html
@@ -68,7 +68,7 @@
             </div>
             
             <div class="comic-item" style="background: rgba(26, 26, 75, 0.6);">
-                <img src="download (1).jpeg" alt="Star Rangers" class="comic-cover">
+                <img src="piclumen-1755500307401.png" alt="Star Rangers" class="comic-cover">
                 <h3>Star Rangers: Dark Nebula</h3>
                 <p>A mysterious signal from the Dark Nebula threatens the entire galaxy!</p>
                 <a href="#" 
@@ -106,4 +106,5 @@
         <p style="color: #ffcc00; font-size: 0.9em;">Explore the infinite possibilities of storytelling!</p>
     </footer>
 </body>
+
 </html>
