--- a/ex3.html
+++ b/ex3.html
@@ -58,7 +58,7 @@
         
         <div class="comic-gallery">
             <div class="comic-item" style="background: rgba(26, 26, 75, 0.6);">
-                <img src="download.jpeg" alt="Galactic Guardians" class="comic-cover">
+                <img src="piclumen-1755500438773.png" alt="Galactic Guardians" class="comic-cover">
                 <h3>Galactic Guardians #42</h3>
                 <p>The team faces their greatest challenge yet against the Void Emperor!</p>
                 <a href="https://en.wikipedia.org/wiki/The_Super_Powers_Team:_Galactic_Guardians" 
@@ -108,3 +108,4 @@
 </body>
 
 </html>
+
